--- a/SixTest/DataAnalysis/Controller/CommentVC.xib
+++ b/SixTest/DataAnalysis/Controller/CommentVC.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommentVC" customModule="SixTest" customModuleProvider="target">
             <connections>
+                <outlet property="InputButton" destination="ia5-hp-xEO" id="exu-ux-z4b"/>
                 <outlet property="InputView" destination="Ru7-6C-dEc" id="JP3-hL-FHq"/>
                 <outlet property="bottomCons" destination="6Wy-uv-Qrr" id="iNz-Or-vB3"/>
                 <outlet property="bottomHCons" destination="26O-Nt-77U" id="r5t-JP-rvo"/>
@@ -47,12 +48,25 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ia5-hp-xEO">
+                            <rect key="frame" x="10" y="5" width="280" height="30"/>
+                            <state key="normal">
+                                <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="inputBtnClick:" destination="-1" eventType="touchUpInside" id="YPA-5K-FBq"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="1" green="0.30011160710000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="26O-Nt-77U"/>
+                        <constraint firstItem="HIp-kX-afB" firstAttribute="leading" secondItem="ia5-hp-xEO" secondAttribute="trailing" constant="10" id="B0F-B9-Ttg"/>
                         <constraint firstAttribute="bottom" secondItem="Ru7-6C-dEc" secondAttribute="bottom" constant="5" id="Is5-Fa-9l6"/>
+                        <constraint firstAttribute="bottom" secondItem="ia5-hp-xEO" secondAttribute="bottom" constant="5" id="JyT-KY-eMH"/>
+                        <constraint firstItem="ia5-hp-xEO" firstAttribute="top" secondItem="G4Y-c8-ji0" secondAttribute="top" constant="5" id="SFc-nx-oR2"/>
                         <constraint firstItem="Ru7-6C-dEc" firstAttribute="top" secondItem="G4Y-c8-ji0" secondAttribute="top" constant="5" id="Vnf-Kb-exR"/>
+                        <constraint firstItem="ia5-hp-xEO" firstAttribute="leading" secondItem="G4Y-c8-ji0" secondAttribute="leading" constant="10" id="Vxa-ag-Oxd"/>
                         <constraint firstItem="HIp-kX-afB" firstAttribute="leading" secondItem="Ru7-6C-dEc" secondAttribute="trailing" constant="10" id="aje-aw-n1p"/>
                         <constraint firstAttribute="trailing" secondItem="HIp-kX-afB" secondAttribute="trailing" constant="10" id="kjH-rT-TxD"/>
                         <constraint firstItem="HIp-kX-afB" firstAttribute="centerY" secondItem="G4Y-c8-ji0" secondAttribute="centerY" id="qHm-oT-vUw"/>
